Kubernetes/backend-deployment.yaml
apiVersion:  apps/v1
kind:  Deployment
metadata:
  name:  backend-deployment
  labels:
    app:  backend
spec:
  replicas:  3

  selector:
    matchLabels:
      app:  backend

  template:
    metadata:
      labels:
        app:  backend

    spec:
      containers:
      - name:  backend
        image:  social-backend:v2
        imagePullPolicy:  IfNotPresent
        ports:
         - containerPort:  8001

        volumeMounts:
        - name: media-storage
          mountPath: /app/media

      volumes:
      - name: media-storage
        persistentVolumeClaim:
          claimName: media-pvc
