Kubernetes/frontend-deployment.yaml
apiVersion:  apps/v1
kind:  Deployment
metadata:
  name:  frontend-deployment
  labels:
    app:  frontend

spec:
  replicas:  3

  selector:
    matchLabels:
      app:  frontend

  template:
    metadata:
      labels:
        app:  frontend

    spec:
      containers:
      - name:  frontend
        image:  social-frontend
        ports:
         - containerPort:  3000
