Kubernetes/postgres-deployment.yaml
apiVersion:  apps/v1
kind:  Deployment

metadata:
  name:  postgres-deployment
  
spec:
  replicas:  1
  
  selector:
    matchLabels: 
      app:  postgres

  template:
    metadata:
      labels:
        app:  postgres

    spec:
      containers: 
       - name:  database
         image:  postgres:15
         ports:
          - containerPort:  5432

         volumeMounts:
           - name:  postgres-storage
             mountPath:  "/var/lib/postgresql/data"

      volumes:  
       - name:  postgres-storage
         persistentVolumeClaim:
           claimName:  postgres-pvc
