Kubernetes/backend-service.yaml
apiVersion:  v1
kind:  Service
metadata: 
  name:  backend-service
  labels:
    app:  backend

spec:
  selector:
    app:  backend

  ports:
    - port:  8001 
      targetPort:  8001

  type:  ClusterIP
