Kubernetes/frontend-service.yaml
apiVersion:  v1
kind:  Service

metadata:
  name:  frontend-service
  labels:
    app:  frontend

spec:
  selector:
    app:  frontend
  
  ports:
   - port:  3000
     targetPort:  80

  type:  NodePort
