Kubernetes/postgres-service.yaml
apiVersion:  v1
kind:  Service

metadata:
  name:  postgres-service
  labels:
    app:  postgres

spec:
  selector:
    app:  postgres

  ports:
   - port:  5432
     targetPort:  5432

  type:  ClusterIP
